[project]
name = "lib-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "betzamica", email = "betzabeth.maestre@micasino.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
