[project]
name = "lib-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "betzamica", email = "betzabeth.maestre@micasino.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.161.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-bigquery>=3.29.0",
    "gspread-dataframe>=4.0.0",
    "gspread>=6.1.4",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "protobuf>=5.29.3",
    "psycopg2-binary>=2.9.10",
    "pysftp>=0.2.9",
    "python-dotenv>=1.0.1",
    "typer>=0.15.1",
    "db-dtypes>=1.4.2",
    "pyarrow>=19.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
